Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25672

QtLocation ignores plugin error strings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.0.0
    • 5.0.0 Beta 1
    • None
    • 88b6015918d6b113a45ea514bbd8083873609486

      If one passes an error in

      QGeoMappingManagerEngine* QGeoServiceProviderFactoryNokia::createMappingManagerEngine(const QVariantMap &parameters, QGeoServiceProvider::Error *error, QString *errorString) const

      QtLocation will ignore the error message and provide just an:
      qmlInfo(this) << tr("Warning: Plugin does not support mapping.");

      in void QDeclarativeGeoMap::pluginReady()

      There should be a way to get the errorString to the user application.

        For Gerrit Dashboard: QTBUG-25672
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes