Do not completely ignore plugin error messages

If a plugin decides not to create a manager (mapping, geo, places etc)
its error message is at least displayed in the debugger output window.

Task-number: QTBUG-25672
Change-Id: Ic56544ff06188a701959a88f604f56c9a0ec65dc
Reviewed-by: Alex Wilson <alex.wilson@nokia.com>