src/imports/location/declarativeplaces/qdeclarativeplaceicon.cpp
@@ -205,7 +205,8 @@ void QDeclarativePlaceIcon::pluginReady()
     QGeoServiceProvider *serviceProvider = m_plugin->sharedGeoServiceProvider();
     QPlaceManager *placeManager = serviceProvider->placeManager();
     if (!placeManager || serviceProvider->error() != QGeoServiceProvider::NoError) {
-        qmlInfo(this) << tr("Warning: Plugin does not support places.");
+        qmlInfo(this) << tr("Warning: Plugin does not support places. Error message: %1")
+                         .arg(serviceProvider->errorString());
         return;
     }
 }
